--- a/config/boards/arm/bros/bros_defconfig
+++ b/config/boards/arm/bros/bros_defconfig
@@ -2,13 +2,10 @@
 # Copyright (c) 2022 Bluebell Keyboards
 
 CONFIG_SOC_SERIES_STM32F4X=y
-CONFIG_SOC_STM32F411XC=y
+CONFIG_SOC_STM32F411XE=y
 
 # MPU Settings
 CONFIG_ARM_MPU=y
-
-# enable pinmux
-# CONFIG_PINMUX=y
 
 # enable pin controller
 CONFIG_PINCTRL=y
@@ -28,3 +25,4 @@ CONFIG_ZMK_KSCAN_DIRECT_POLLING=y
 
 # build a UF2 image
 CONFIG_BUILD_OUTPUT_UF2=y
+CONFIG_BUILD_OUTPUT_UF2_FAMILY_ID="0x57755a57"
