--- a/build.yaml
+++ b/build.yaml
@@ -1,22 +1,3 @@
 include:
-
-  - shield: lily_left
-    board: nrfmicro33@1.4.0
-  - shield: lily_right
-    board: nrfmicro33@1.4.0
-  - shield: sofle_left
-    board: nrfmicro33@1.4.0
-  - shield: sofle_right
-    board: nrfmicro33@1.4.0
-
-  - shield: lily_left
-    board: nrfmicro@1.4.0
-  - shield: lily_right
-    board: nrfmicro@1.4.0
-  - shield: sofle_left
-    board: nrfmicro@1.4.0
-  - shield: sofle_right
-    board: nrfmicro@1.4.0
-
-  - board: cyber60@B
-    keymap: config/boards/arm/cyber60/cyber60.keymap
+  - board: bros
+    keymap: config/boards/arm/bros/bros.keymap
