--- a/config/boards/arm/bros/bros.dts
+++ b/config/boards/arm/bros/bros.dts
@@ -5,14 +5,14 @@
  */
 
 /dts-v1/;
-#include <st/f4/stm32f411Xe.dtsi>
-#include <st/f4/stm32f411c(c-e)ux-pinctrl.dtsi>
+#include <st/f4/stm32f401Xc.dtsi>
+#include <st/f4/stm32f401c(b-c)ux-pinctrl.dtsi>
 
 #include <dt-bindings/zmk/matrix_transform.h>
 
 / {
 	model = "Bros";
-	compatible = "bluebell,bros", "st,stm32f411";
+	compatible = "bluebell,bros", "st,stm32f401";
 
 	chosen {
 		zephyr,sram = &sram0;
