Fix to allow the matrix time to reset.

--- a/config/boards/arm/bros/bros_defconfig
+++ b/config/boards/arm/bros/bros_defconfig
@@ -26,3 +26,6 @@ CONFIG_ZMK_KSCAN_DIRECT_POLLING=y
 # build a UF2 image
 CONFIG_BUILD_OUTPUT_UF2=y
 CONFIG_BUILD_OUTPUT_UF2_FAMILY_ID="0x57755a57"
+
+# fix for the matrix scan
+CONFIG_ZMK_KSCAN_MATRIX_WAIT_BETWEEN_OUTPUTS=1
