--- a/config/boards/arm/bros/bros.dts
+++ b/config/boards/arm/bros/bros.dts
@@ -9,6 +9,7 @@
 #include <st/f4/stm32f401c(b-c)ux-pinctrl.dtsi>
 
 #include <dt-bindings/zmk/matrix_transform.h>
+#include <dt-bindings/led/led.h>
 
 / {
 	model = "Bros";
@@ -21,6 +22,7 @@
 		zephyr,console = &cdc_acm_uart;
 		zmk,kscan = &kscan0;
 		zmk,matrix_transform = &transform;
+                zmk,underglow = &led_strip;
 	};
 
 	transform: transform {
@@ -66,6 +68,28 @@
 
 &i2c1 {
 	pinctrl-0 = <&i2c1_scl_pb6 &i2c1_sda_pb7>;
+};
+
+&spi1 {
+	pinctrl-0 = <&spi1_sck_pa5 &spi1_miso_pa6 &spi1_mosi_pa7>;
+	pinctrl-names = "default";
+
+        led_strip: ws2812@0 {
+                compatible = "worldsemi,ws2812-spi";
+                label = "WS2812";
+
+                /* SPI */
+                reg = <0>;
+                spi-max-frequency = <5250000>;
+
+                /* WS2812 */
+                chain-length = <48>; /* number of LEDs */
+                spi-one-frame = <0x70>; /* make sure to configure this properly for your SOC */
+                spi-zero-frame = <0x40>; /* make sure to configure this properly for your SOC */
+                color-mapping = <LED_COLOR_ID_GREEN
+                                 LED_COLOR_ID_RED
+                                 LED_COLOR_ID_BLUE>;
+        };
 };
 
 &usbotg_fs {
