--- a/config/boards/arm/bros/bros_defconfig
+++ b/config/boards/arm/bros/bros_defconfig
@@ -29,3 +29,7 @@ CONFIG_BUILD_OUTPUT_UF2_FAMILY_ID="0x57755a57"
 
 # fix for the matrix scan
 CONFIG_ZMK_KSCAN_MATRIX_WAIT_BETWEEN_OUTPUTS=1
+
+# RGB underglow
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
